Deployments/Project/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: projectname
  labels:
    app: projectname
    app.kubernetes.io/component: projectname
    app.kubernetes.io/instance: projectname
    app.kubernetes.io/part-of: projectname-app
    app.openshift.io/runtime-version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectname
  template:
    metadata:
      labels:
        app: projectname
        deploymentconfig: projectname
    spec:
      containers:
        - name: projectname
          image: imagename-is-populated-by-pipeline
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      imagePullSecrets: 
      - name: acr
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
     
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
