Deployments/Project/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: projectname
    app.kubernetes.io/component: projectname
    app.kubernetes.io/instance: projectname
    app.kubernetes.io/part-of: projectname-app
  name: projectname
spec:
  ports:
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 443
  - name: 80-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: projectname
    deploymentconfig: projectname
  sessionAffinity: None
  type: ClusterIP
