Deployments/Project/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mdsregistryapi
    app.kubernetes.io/component: mdsregistryapi
    app.kubernetes.io/instance: mdsregistryapi
    app.kubernetes.io/part-of: mdsregistryapi-app
  name: mdsregistryapi
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: mdsregistryapi
    weight: 100
  wildcardPolicy: None
